updated reward scenario descriptions

--- a/docs/5g-on-helium/mobile-poc.mdx
+++ b/docs/5g-on-helium/mobile-poc.mdx
@@ -174,8 +174,8 @@ of Test 1 is most recent as there is not enough data to calculate a Moving Avera
 
 **Test 2 and Later**
 
-This 5G Hotspot **will** be eligible for rewards during the Reward Periods for which the results of
-these are most recent.
+This 5G Hotspot **will** be eligible for **full** rewards during the Reward Periods for which the
+results of these are most recent.
 
 ---
 
@@ -192,8 +192,8 @@ of Test 1 is most recent as there is not enough data to calculate a Moving Avera
 
 **Test 2 through 4**
 
-This 5G Hotspot **will** be eligible for rewards during the Reward Periods for which the results of
-Tests 2 through 4 are the most recent.
+This 5G Hotspot **will** be eligible for **full** rewards during the Reward Periods for which the
+results of Tests 2 through 4 are the most recent.
 
 **Test 5 through 6**
 
@@ -202,8 +202,8 @@ of Test 5 through 6 is most recent as there is not enough data to calculate a Mo
 
 **Test 7 and Later**
 
-This 5G Hotspot **will** be eligible for rewards during the Reward Periods for which the results of
-Tests 7 and later are the most recent.
+This 5G Hotspot **will** be eligible for **full** rewards during the Reward Periods for which the
+results of Tests 7 and later are the most recent.
 
 ---
 
@@ -221,8 +221,8 @@ of Test 1 is most recent as there is not enough data to calculate a Moving Avera
 
 **Test 2 through 4**
 
-This 5G Hotspot **will** be eligible for rewards during the Reward Periods for which the results of
-Tests 2 through 4 are the most recent.
+This 5G Hotspot **will** be eligible for **full** rewards during the Reward Periods for which the
+results of Tests 2 through 4 are the most recent.
 
 **Test 5 through 8**
 
@@ -231,8 +231,8 @@ of Test 5 through 8 is most recent as there is not enough data to calculate a Mo
 
 **Test 9 and Later**
 
-This 5G Hotspot **will** be eligible for rewards during the Reward Periods for which the results of
-Tests 9 and later are the most recent.
+This 5G Hotspot **will** be eligible for **full** rewards during the Reward Periods for which the
+results of Tests 9 and later are the most recent.
 
 ---
 
@@ -250,15 +250,15 @@ of Test 1 is most recent as there is not enough data to calculate a Moving Avera
 
 **Test 2 and Later**
 
-This 5G Hotspot **will** be eligible for rewards during the Reward Periods for which the results of
-Tests 2 and later are the most recent.
+This 5G Hotspot **will** be eligible for **full** rewards during the Reward Periods for which the
+results of Tests 2 and later are the most recent.
 
 ---
 
-**Failing Multiple Speed Tests:**
+**Multiple Sub Optimal Speed Tests:**
 
-This 5G Hotspot has failed Speed Tests in Test 3, 4, 5, and 6. This has caused the Moving Average to
-fail for Test 6, 7, and 8.
+This 5G Hotspot has less than `Acceptable` Speed Tests in Test 3, 4, 5, and 6. This has caused the
+Moving Average to fall for Test 6, 7, and 8.
 
 <img className="docsheader" src={useBaseUrl('img/5g-on-helium/speed-test-many-fail.png')} />
 
@@ -269,19 +269,19 @@ of Test 1 is most recent as there is not enough data to calculate a Moving Avera
 
 **Test 2 through 5**
 
-This 5G Hotspot **will** be eligible for rewards during the Reward Periods for which the results of
-Tests 2 through 5 are the most recent.
+This 5G Hotspot **will** be eligible for **full** rewards during the Reward Periods for which the
+results of Tests 2 through 5 are the most recent.
 
 **Test 6 through 8**
 
-This 5G Hotspot **will not** be eligible for rewards during the Reward Periods for which the results
-of Tests 6 through 8 are the most recent as at least one Speed Test metric Moving Average has not
-met or exceeded the required values.
+This 5G Hotspot **will** be eligible for **half** rewards during the Reward Periods for which the
+results of Tests 6 through 8 are the most recent as at least one Speed Test metric Moving Average
+has not met or exceeded the required values.
 
 **Test 9 and Later**
 
-This 5G Hotspot **will** be eligible for rewards during the Reward Periods for which the results of
-Tests 9 and later are the most recent.
+This 5G Hotspot **will** be eligible for **full** rewards during the Reward Periods for which the
+results of Tests 9 and later are the most recent.
 
 ---
 
