--- a/docs/5g-on-helium/mobile-poc.mdx
+++ b/docs/5g-on-helium/mobile-poc.mdx
@@ -76,7 +76,7 @@ brief interruptions.
 
 ## Stage 1: Genesis Rewards
 
-:::info Reward Targets
+** Reward Targets:**
 
 During Genesis, 100M Mobile tokens are allocated to be issued per day. This 24-hour Reward Period is
 expressed in blocks, and aligns as close to the Reward Period time range as possible, but may not
@@ -86,8 +86,6 @@ Given this slight differentiation, daily rewards may not equate to an exact 100M
 this
 [Example Reward Transaction](https://explorer.helium.com/txns/0n4TO_2W14rrsGt-nxBTotiHFCFukkO04QoXIxaOtAY)
 for reference.
-
-:::
 
 ### Genesis Phase 1: Time Period Triggered Rewards
 
