--- a/docs/5g-on-helium/mobile-poc.mdx
+++ b/docs/5g-on-helium/mobile-poc.mdx
@@ -127,15 +127,87 @@ must:
 > - A minimum Download speed, Upload speed, and Latency will be required by each 5G Hotspot to
 >   ensure it is providing quality coverage.
 
-To meet the Speed Test requirements as outlined in
-[HIP-53](https://github.com/helium/HIP/blob/main/0053-mobile-dao.md#oracle-operations), a 5G Hotspot
-must have a rolling average Download speed of at least 100Mbps **AND** a rolling average Upload
+A 5G Hotspot is determined to be providing `Acceptable` coverage as outlined in
+[HIP-53](https://github.com/helium/HIP/blob/main/0053-mobile-dao.md#oracle-operations), when it
+maintains a rolling average Download speed of at least 100Mbps **AND** a rolling average Upload
 speed of at least 10Mbps **AND** a rolling average Latency of 50ms or less.
+
+**Tiered Speed Test:**
+
+In response to community feedback and further exploration by Chris from DeWiPulse for his
+[analysis of and commentary on public Internet data in the United States](https://dewipulse.com/connectivity-where-it-matters/)
+Speed Test results are categorized into three Tiers.
+
+:::info Why are Hotspots with slower speeds being rewarded at all?
+
+Many locations where CBRS connectivity is being deployed, including some rural areas, do not always
+have the Internet high-speed connectivity needed to always meet the acceptable Internet requirements
+for Genesis rewards.
+
+Often these areas don't have good cellular coverage either. That's why we believe it is important to
+incentivize Helium deployments in less well-connected areas.
+
+:::
+
+**Tiered Speed Test values introduce a new multiplier to the Genesis Rewards calculations:**
 
 A 5G Hotspot will automatically perform a Speed Test approximately every 12 hours with the results
 being averaged by the MOBILE PoC Oracle over the previous `6` tests, depending on the availability
 of the data. This moving average is reset following a speed test gap of `>12 hours` and a minimum of
 `2` Speed Test results are required to be eligible for Genesis Rewards.
+
+| Speed Test Tier | Reward Multiplier |                  Requirement (speeds in Mbps)                  |
+| :-------------: | :---------------: | :------------------------------------------------------------: |
+|  `Acceptable`   |       1.00x       | `100+` Download, **AND** `10+` Upload, **AND** `<50ms` Latency |
+|   `Degraded`    |       0.50x       |  `50+` Download, **AND** `5+` Upload, **AND** `<75ms` Latency  |
+|     `Poor`      |       0.25x       | `30+` Download, **AND** `2+` Upload, **AND** `<100ms` Latency  |
+|     `Fail`      |       0.00x       |  `<30` Download, **OR** `<2` Upload, **OR** `>100ms` Latency   |
+
+- Speed Test Results are put into Tiers based on the minumum Tier of each Download, Upload and
+  Latency. (logical `AND`)
+- Speed Test results that do not meet the minimum requirements for any Download, Upload or Latency
+  are considered to have `Failed` and are not eligible for Genesis Rewards until the Speed Test
+  Average is improved. (logical `OR`)
+
+**Example 1: All Acceptable**
+
+```bash
+Download    200 ->  `Acceptable`
+Upload       40 ->  `Acceptable`
+Latency      15 ->  `Acceptable`
+---------------------------------
+Speed Test Tier ->  `Acceptable`  -> 1.0x Multiplier
+```
+
+**Example 2: Degraded Upload**
+
+```bash
+Download    200 ->  `Acceptable`
+Upload        6 ->  `Degraded`
+Latency      15 ->  `Acceptable`
+---------------------------------
+Speed Test Tier ->  `Degraded`    -> 0.5x Multiplier
+```
+
+**Example 3: Failed Latency**
+
+```bash
+Download    200 ->  `Acceptable`
+Upload       40 ->  `Acceptable`
+Latency     150 ->  `Fail`
+---------------------------------
+Speed Test Tier ->  `Fail`        -> 0.0x Multiplier
+```
+
+When combined with existing
+[Small Cell Type Reward Scale Mulitpliers](./mining-mobile#small-cell-radio-reward-scaling) the
+Rewards Scaling Table is as follows:
+
+| Speed Test         | Acceptable | Degraded |  Poor   |  Fail   |
+| ------------------ | :--------: | :------: | :-----: | :-----: |
+| High Power Outdoor |  `4.000`   | `2.000`  | `1.000` | `0.000` |
+| Outdoor            |  `2.500`   | `1.250`  | `0.625` | `0.000` |
+| Indoor             |  `1.000`   | `0.500`  | `0.250` | `0.000` |
 
 :::note Moving Average
 
