warning admonition callout updates

--- a/docs/5g-on-helium/mobile-poc.mdx
+++ b/docs/5g-on-helium/mobile-poc.mdx
@@ -357,7 +357,7 @@ results of Tests 9 and later are the most recent.
 
 :::warning
 
-**The Minimum Download speed and Upload speed requirements will increase over time.**
+**The backhaul requirements will change over time.**
 
 **This is to give Hotspot hosts time to improve their setup and internet connections and to ensure
 that 5G Hotspots are providing high-quality coverage.**
